--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,11 @@ jobs:
       working-directory: ./client
       run: npm run build
 
+    - name: Set up Git user
+      run: |
+        git config --global user.email "${{ secrets.GIT_USER_EMAIL }}"
+        git config --global user.name "${{ secrets.GIT_USER_NAME }}"
+
     - name: Deploy
       env:
         GH_PAGES_TOKEN: ${{ secrets.GH_PAGES_TOKEN }}
