--- a/client/package.json
+++ b/client/package.json
@@ -1,12 +1,12 @@
 {
-  "homepage" : "https://github.com/HimashaHerath.github.io/Portfolio_2.0",
+  "homepage": "https://github.com/HimashaHerath.github.io/Portfolio_2.0",
   "name": "client",
   "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "predeploy":"npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build --repo=https://x-access-token:${GH_PAGES_TOKEN}@github.com/HimashaHerath/Portfolio_2.0.git",
     "build": "vite build",
     "preview": "vite preview"
@@ -20,6 +20,7 @@
     "framer-motion": "^10.11.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-scroll": "^1.8.9",
     "react-three-fiber": "^6.0.13",
     "react-tilt": "^1.0.2",
     "react-type-animation": "^3.0.1",
