--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,6 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-      with:
-        ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
     - name: Set up Node.js
       uses: actions/setup-node@v2
@@ -34,7 +32,9 @@ jobs:
         git config --global user.name "${{ secrets.GIT_USER_NAME }}"
 
     - name: Deploy
+      env:
+        GH_PAGES_TOKEN: ${{ secrets.GH_PAGES_TOKEN }}
       working-directory: ./client
       run: |
-        git remote set-url origin git@github.com:HimashaHerath/Portfolio_2.0.git
+        git remote set-url origin https://x-access-token:${GH_PAGES_TOKEN}@github.com/${{ github.repository }}
         npm run deploy
