--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "vite",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build --repo=git@github.com:HimashaHerath/Portfolio_2.0.git",
+    "deploy": "gh-pages -d build --repo=https://x-access-token:${GH_PAGES_TOKEN}@github.com/HimashaHerath/Portfolio_2.0.git",
     "build": "vite build",
     "preview": "vite preview"
   },
